--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ body {
     color: var(--normal-title-color);
 }
 
-.card-p {
+.card-list-p {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
