--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,7 @@ button {
     line-height: 1.5;
     text-align: center;
     letter-spacing: 0.04em;
+    background-color: var(--light);
     color: var(--primary-brand);
 }
 
